k8s_yamls/backend-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"backend-deploy"},"name":"backend-deploy","namespace":"thevoid"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"backend-deploy"}},"strategy":{},"template":{"metadata":{"annotations":{"sidecar.istio.io/inject":"true"},"labels":{"app":"backend-deploy","tier":"backend"}},"spec":{"containers":[{"env":[{"name":"DB_ADMINUSER","valueFrom":{"secretKeyRef":{"key":"DB_ADMINUSER","name":"void-secret"}}},{ [...]
  labels:
    app: backend-deploy
    version: v1
  name: backend-deploy
  namespace: thevoid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deploy
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: backend-deploy
        version: v1
        tier: backend
    spec:
      containers:
      - env:
        - name: DB_ADMINUSER
          valueFrom:
            secretKeyRef:
              key: DB_ADMINUSER
              name: void-secret
        - name: DB_ADMINPWD
          valueFrom:
            secretKeyRef:
              key: DB_ADMINPWD
              name: void-secret
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              key: DB_HOST
              name: void-config
        - name: DB_PORT
          valueFrom:
            configMapKeyRef:
              key: DB_PORT
              name: void-config
        - name: R_HOST
          valueFrom:
            configMapKeyRef:
              key: R_HOST
              name: void-config
        - name: R_PORT
          valueFrom:
            configMapKeyRef:
              key: R_PORT
              name: void-config
        image: dennismila/backend-void:1.1
        imagePullPolicy: IfNotPresent
        name: void-backend
        ports:
        - containerPort: 9080
        resources:
          requests:
             cpu: 200m
