k8s_yamls/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-deploy
    version: v2
  name: backend-deploy-canary
  namespace: thevoid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deploy
      version: v2
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: backend-deploy
        tier: backend
        version: v2
    spec:
      containers:
      - image: dennismila/backend-void:1.1
        name: void-backend
        ports:
        - containerPort: 9080
status: {}
