k8s_yamls/frontend-k8s-1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: frontend-deploy
    version: v1
  name: frontend-deploy
  namespace: thevoid-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend-deploy
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend-deploy
        version: v1
    spec:
      containers:
      - env:
        - name: BACKEND_URL
          valueFrom:
            configMapKeyRef:
              key: BACKEND_URL
              name: void-config
        image: carnsds/frontend-void:1.3
        imagePullPolicy: IfNotPresent
        name: void-frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
             cpu: 125m
