k8s_yamls/frontend-ocp-1.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: frontend-deploy
  namespace: thevoid
  labels:
    app: frontend-deploy
    version: v1
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
    app: frontend-deploy
    version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend-deploy
        version: v1
    spec:
      containers:
        - name: void-frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
             cpu: 125m
          securityContext:
            capabilities:
            privileged: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: carnsds/frontend-void:1.3
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: general
      serviceAccount: general
