k8s_yamls/mongo-ocp.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: mongo-deploy
  namespace: thevoid
  labels:
    app: mongo-deploy
    version: v1
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
    app: mongo-deploy
    version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: mongo-deploy
        tier: backend
        version: v1
    spec:
      containers:
        - image: mongo:3.6.17
          name: mongo
          args: [ "--auth" ]
          ports:
          - containerPort: 27017
          volumeMounts:
          - name: data
            mountPath: /data/db
      volumes:
        - name: data
          emptyDir: {}
          securityContext:
            capabilities:
            privileged: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
      serviceAccountName: general
      serviceAccount: general
