k8s_yamls/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-deploy
  name: mongo-deploy
  namespace: thevoid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deploy
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: mongo-deploy
        tier: backend
    spec:
      containers:
      - image: mongo:3.6.17
        name: mongo
        args: [ "--auth" ]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data
          mountPath: /data/db
      volumes:
      - name: data
        emptyDir: {}
