k8s_yamls/redis-ocp.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  labels:
    app: redis-deploy
    version: v1
  name: redis-deploy
  namespace: thevoid
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
    app: redis-deploy
    version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: redis-deploy
        tier: backend
        version: v1
    spec:
      serviceAccount: general
      serviceAccountName: general
      containers:
      - image: redis:alpine
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
