k8s_yamls/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-deploy
  name: redis-deploy
  namespace: thevoid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deploy
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: redis-deploy
        tier: backend
    spec:
      serviceAccount: general
      serviceAccountName: general
      containers:
      - image: redis:alpine
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
status: {}
