k8s_yamls/backend-expose.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend-deploy
  name: backend-service
  namespace: thevoid
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9080
  selector:
    app: backend-deploy
status:
  loadBalancer: {}
