k8s_yamls/frontend-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-deploy
    service: frontend-service
  name: frontend-service
  namespace: thevoid-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-deploy
  type: ClusterIP
status:
  loadBalancer: {}
