k8s_yamls/mongo-expose.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongo-deploy
  name: mongo-service
  namespace: thevoid
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo-deploy
  type: ClusterIP
status:
  loadBalancer: {}
