k8s_yamls/redis-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-deploy
  name: redis-service
  namespace: thevoid
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-deploy
  type: ClusterIP
status:
  loadBalancer: {}
