k8s_yamls/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: thevoid-gateway
  namespace: thevoid
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thevoid-vs
  namespace: thevoid
spec:
  hosts:
  - "*"
  gateways:
  - thevoid-gateway
  http:
  - match:
    - uri:
        prefix: /App
    rewrite:
        uri: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /User
    - uri:
        prefix: /Article
    route:
    - destination:
        host: backend-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /Calc
    rewrite:
        uri: /
    route:
    - destination:
        host: backend-service
        port:
          number: 80
---
